# Newbie

./: .gitignore  CMakeLists.txt  README.md  generated.cpp  setup.bat  setup.sh
App/: CMakeLists.txt  Window.cpp  Window.hpp  main.cpp
Custom/: CMakeLists.txt  TypeList.cpp  custom_global.hpp  custom_project.json
Custom/Scripts/: RotateScript.cpp  RotateScript.hpp
Custom/Shaders/: unlit_vert.glsl
Editor/: AssetPanel.cpp  AssetPanel.hpp  CMakeLists.txt  Dialog.cpp  Dialog.hpp  FileDialog.cpp  FileDialog.hpp  GamePanel.cpp  GamePanel.hpp  GroupPanel.cpp  GroupPanel.hpp  HierarchyPanel.cpp  HierarchyPanel.hpp  InspectorPanel.cpp  InspectorPanel.hpp  MainMenuBar.cpp  MainMenuBar.hpp  NewDialog.cpp  NewDialog.hpp  Panel.cpp  Panel.hpp  ProjectDialog.cpp  ProjectDialog.hpp  SceneDialog.cpp  SceneDialog.hpp  ScenePanel.cpp  ScenePanel.hpp  Widget.cpp  Widget.hpp  hierarchywidget.cpp  hierarchywidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  objectitem.cpp  objectitem.h  projectwidget.cpp  projectwidget.h  scenewidget.cpp  (+3 more)
Editor/Shaders/: outline_frag.glsl  outline_vert.glsl  select_frag.glsl  select_vert.glsl  white_frag.glsl  white_vert.glsl
Editor/imgui/: imgui.h  imgui_internal.h
Engine/: Asset.cpp  Asset.hpp  CMakeLists.txt  Component.cpp  Component.hpp  Config.cmake.in  Engine.hpp  EngineExport.hpp  Entity.cpp  Entity.hpp  GameObject.cpp  GameObject.hpp  Group.cpp  Group.hpp  IBehavior.hpp  IDraw.hpp  IEnable.hpp  IRender.hpp  Input.cpp  Input.hpp  Interface.hpp  Object.cpp  Object.hpp  Prefab.cpp  Prefab.hpp  Project.cpp  Project.hpp  Resource.cpp  Resource.hpp  Scene.cpp  Scene.hpp  Script.cpp  Script.hpp  Static.cpp  Static.hpp  Time.cpp  Time.hpp  Transform.cpp  Transform.hpp  Type.cpp  (+4 more)
Engine/Common/: Debug.hpp  GameObject.cpp  Project.cpp  Project.hpp  Resource.cpp  Scene.hpp  Script.cpp  Script.hpp  Time.hpp  Transform.cpp  Type.cpp  Type.hpp
Engine/Graphics/: Batch.cpp  Batch.hpp  Camera.cpp  Camera.hpp  Drawer.cpp  Drawer.hpp  Framebuffer.cpp  Framebuffer.hpp  Geometry.cpp  Geometry.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshDrawer.cpp  MeshDrawer.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
HeaderTool/: CMakeLists.txt  Class.cpp  Class.hpp  Config.cmake.in  Enum.cpp  Enum.hpp  Generator.cpp  Generator.hpp  Namespace.cpp  Namespace.hpp  Property.cpp  Property.hpp  main.cpp
Samples/Empty/: CMakeLists.txt  Empty.json  EmptyScene.json  EmptyScript.cpp  EmptyScript.hpp  Main.json
Samples/Lofi/: CMakeLists.txt  Lofi.json  User.hpp  UserExport.hpp
Samples/Lofi - 복사본/: CMakeLists.txt
Samples/Lofi - 복사본/Shaders/: unlit_vert.glsl
Samples/Lofi/Prefabs/: girl.json
Samples/Lofi/Scenes/: Main.json
Samples/Lofi/Scripts/: RotateScript.cpp  RotateScript.hpp  SampleScript.cpp  SampleScript.hpp
Samples/Lofi/Shaders/: unlit_frag.glsl  unlit_vert.glsl
Samples/Serialization/: CMakeLists.txt
Samples/Serialization/Scripts/: RotateScript.hpp
User/: CMakeLists.txt  UserExport.hpp
User/Scenes/: girl_scene.json
User/Scripts/: RotateScript.cpp
User/Shaders/: unlit_frag.glsl
